iRedMail-0.9.3:
    * Works on new distribution releases:
        - Ubuntu 15.10
        - OpenBSD 5.8.

    * SOGo Groupware is now available on FreeBSD.
    * Cluebringer has been removed. It's not under active development and no
      new release since 2013 (the latest stable release doesn't support IPv6),
      we have throttling support in iRedAPD as replacement.
    * Improvements:
        - Update Fail2ban filter to catch postscreen log.
        - Enable global address book for SQL backends in SOGo by default,
          domains are isolated. Thanks dnwahs <shawn _at_ mcsp.net> for the
          sharing in iRedMail forum.
        - New script: tools/ldap_assign_user_to_groups.py. Used to assign user
          to specified mailing lists, or remove membership.
        - New script: tools/ldap_move_members_to_another_group.py. Used to
          move or copy ALL members of specified mailing list to another.
        - Supports per-user alias address in SQL backends. 2 new sql columns
          are required: `alias.is_alias`, `alias.alias_to`.
        - Enable postscreen service in Postfix by default.
          Important Note: all users must use port 587 for sending email, port
          25 doesn't accept submitted mail by authenticated users anymore.
        - New SQL table `amavisd.outbound_wblist`, used to store whitelists
          and blacklists for outbound messages. It's required by iRedAPD
          plugin 'amavisd_wblist'.

    * Fixed issues:
        - Not add 'virusalert' in Postfix alias file.
        - Not use correct postrotate command to rotate log file on Debian.
        - Incorrectly set default fireewall zone on RHEL/CentOS 7 if you
          didn't choose to restart firewall immediately.
        - 'daemonze =' is required by RHEL/CentOS v6, but not v7.
        - Incorrect Dovecot Master User account used by SOGo.
        - Dovecot Master User doesn't work with LDAP backend.
        - Incorrect quota warning priorities in Dovecot.